force-app/main/default/objects/AFSC__FSContentScanJob__c/AFSC__FSContentScanJob__c.object-meta.xml
<CustomObject>
    <description>F-Secure Cloud Protection: Content scan jobs</description>
    <label>Content Scan Job</label>
    <nameField>
        <label>Content Scan Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Scan Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>