force-app/main/default/objects/AFSC__FSContentScanJob__c/fields/AFSC__ContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>AFSC__ContentVersionId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ContentVersionId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>