force-app/main/default/objects/AFSC__FSContentScanJob__c/fields/AFSC__File_Reputation_Rating__c.field-meta.xml
<CustomField>
    <fullName>AFSC__File_Reputation_Rating__c</fullName>
    <label>File Reputation Rating</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>