force-app/main/default/objects/AFSC__FSContentScanJob__c/fields/AFSC__Is_Download__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Is_Download__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Download</label>
    <type>Checkbox</type>
</CustomField>