force-app/main/default/objects/AFSC__FSContentScanJob__c/fields/AFSC__Scan_Result__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Scan_Result__c</fullName>
    <label>Scan Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>