force-app/main/default/objects/AFSC__FSContentScanJob__c/fields/AFSC__Sha1__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Sha1__c</fullName>
    <label>Sha1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>